# navdp_eval

./: README.md  main.py  pyproject.toml  recording.ipynb
base1_uv/: Dockerfile  build.sh
base2_sim/: Dockerfile  build.sh
base3_lab/: Dockerfile  build.sh  gui.sh  install.sh
base4_full/: Dockerfile  build.sh
data/: .gitignore  org.py  org.txt
interfacing/: navdp_server.py
scripts/: isaac_eval.sh  isaac_run.sh  server_entrypoint.sh  server_run.sh
server/: Dockerfile  build.sh  requirements.txt
